--- a/resources/style/profile.scss
+++ b/resources/style/profile.scss
@@ -551,6 +551,7 @@
         }
     }
     &__container {
+        min-width: 1000px;
         width: 100%;
         margin-left: 15px;
         border-radius: 45px;
